--- a/UrfuHandbooksBackend/UrfuHandbooksBackend.csproj
+++ b/UrfuHandbooksBackend/UrfuHandbooksBackend.csproj
@@ -8,13 +8,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.23"/>
-        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.22"/>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3"/>
-    </ItemGroup>
-
-    <ItemGroup>
-        <Folder Include="App"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.23" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.23" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.23">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.22" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
 
 </Project>
